[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/1px.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemies/basicenemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/enemies/assets/chain1.png" type="Texture" id=3]
[ext_resource path="res://scenes/enemies/assets/bomb1.png" type="Texture" id=4]
[ext_resource path="res://scenes/enemies/assets/shooter2.png" type="Texture" id=5]
[ext_resource path="res://scenes/enemies/EnemyHUE.gd" type="Script" id=6]
[ext_resource path="res://assets/Light.png" type="Texture" id=7]
[ext_resource path="res://scenes/enemies/assets/bomb3.png" type="Texture" id=8]
[ext_resource path="res://scenes/enemies/assets/bomb2.png" type="Texture" id=9]
[ext_resource path="res://scenes/enemies/assets/chain3.png" type="Texture" id=10]
[ext_resource path="res://scenes/enemies/assets/shooter3.png" type="Texture" id=11]
[ext_resource path="res://scenes/enemies/assets/shooter1.png" type="Texture" id=12]
[ext_resource path="res://scenes/enemies/assets/chain2.png" type="Texture" id=13]
[ext_resource path="res://scenes/player/cards/audio/gutpaintick.ogg" type="AudioStream" id=14]

[sub_resource type="CircleShape2D" id=5]
radius = 40.0

[sub_resource type="CircleShape2D" id=2]
radius = 28.8444

[sub_resource type="CircleShape2D" id=3]
radius = 30.4138

[sub_resource type="CircleShape2D" id=4]
radius = 32.0

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="CircleShape2D" id=7]
radius = 493.101

[sub_resource type="CircleShape2D" id=8]
radius = 28.0

[sub_resource type="CircleShape2D" id=11]
radius = 304.0

[sub_resource type="Animation" id=9]
length = 0.001

[sub_resource type="Animation" id=10]
resource_name = "enemydamageflash"
length = 0.1
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("basicenemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.827451, 0.152941, 0.152941, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.12
initial_velocity_random = 0.32
angular_velocity = 165.19
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -3.09
scale = 3.0

[node name="basicenemy" type="Node2D"]

[node name="basicenemy" type="KinematicBody2D" parent="."]
collision_layer = 32
collision_mask = 32
script = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="basicenemy"]
texture = ExtResource( 7 )
texture_scale = 0.6

[node name="CollisionShape2D" type="CollisionShape2D" parent="basicenemy"]
visible = false
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="basicenemy"]
visible = false
position = Vector2( -1.90735e-06, -9.53674e-07 )
rotation = 0.785398
scale = Vector2( 64, 64 )
texture = ExtResource( 1 )

[node name="basicenemy" type="Area2D" parent="basicenemy"]
modulate = Color( 0.803922, 0.454902, 0.454902, 1 )
collision_layer = 8
collision_mask = 8
script = ExtResource( 6 )

[node name="1" type="CollisionShape2D" parent="basicenemy/basicenemy"]
visible = false
rotation = 0.785398
shape = SubResource( 2 )
disabled = true

[node name="1" type="Sprite" parent="basicenemy/basicenemy/1"]
visible = false
light_mask = 0
rotation = -0.785398
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 3 )
flip_h = true

[node name="2" type="Sprite" parent="basicenemy/basicenemy/1"]
visible = false
light_mask = 0
rotation = -0.785398
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 13 )
flip_h = true

[node name="3" type="Sprite" parent="basicenemy/basicenemy/1"]
visible = false
light_mask = 0
rotation = -0.785398
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 10 )
flip_h = true

[node name="2" type="CollisionShape2D" parent="basicenemy/basicenemy"]
visible = false
rotation = 0.785398
shape = SubResource( 3 )
disabled = true

[node name="1" type="Sprite" parent="basicenemy/basicenemy/2"]
visible = false
light_mask = 0
rotation = -0.785398
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 4 )

[node name="2" type="Sprite" parent="basicenemy/basicenemy/2"]
visible = false
light_mask = 0
rotation = -0.785398
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 9 )

[node name="3" type="Sprite" parent="basicenemy/basicenemy/2"]
visible = false
light_mask = 0
rotation = -0.785398
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 8 )

[node name="3" type="CollisionShape2D" parent="basicenemy/basicenemy"]
visible = false
shape = SubResource( 4 )
disabled = true

[node name="1" type="Sprite" parent="basicenemy/basicenemy/3"]
visible = false
light_mask = 0
rotation = -0.785398
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 12 )

[node name="2" type="Sprite" parent="basicenemy/basicenemy/3"]
visible = false
light_mask = 0
rotation = -0.785398
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 5 )

[node name="3" type="Sprite" parent="basicenemy/basicenemy/3"]
visible = false
light_mask = 0
rotation = -0.785398
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 11 )

[node name="enemyweapon" type="KinematicBody2D" parent="basicenemy/basicenemy/3"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="basicenemy/basicenemy/3/enemyweapon"]
visible = false
shape = SubResource( 6 )
disabled = true

[node name="gun" type="Sprite" parent="basicenemy/basicenemy/3/enemyweapon"]
light_mask = 0
position = Vector2( 28.75, -5.36442e-07 )
scale = Vector2( 58.5, 20 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="basicenemy"]
collision_layer = 32
collision_mask = 32

[node name="melee" type="CollisionPolygon2D" parent="basicenemy/Area2D"]
visible = false
polygon = PoolVector2Array( 0, -43, 7, -22, 2, -27, -30, -30, -11, -21, -20, -19, -43, 0, -22, -7, -27, -2, -30, 29, -20, 9, -21, 16, -20, 19, 0, 42, -8, 21, -2, 27, 30, 30, 12, 21, 19, 20, 43, 0, 20, 8, 27, 2, 30, -30, 20, -10, 20, -19 )
disabled = true

[node name="exploding" type="CollisionPolygon2D" parent="basicenemy/Area2D"]
visible = false
polygon = PoolVector2Array( 2, -27, 2, -44, -2, -44, -2, -27, -17, -20, -30, -33, -32, -30, -20, -16, -26, -2, -44, -2, -44, 2, -26, 2, -21, 18, -33, 30, -30, 32, -17, 20, -2, 27, -2, 44, 2, 44, 2, 27, 17, 21, 30, 33, 32, 30, 21, 18, 26, 2, 44, 2, 44, -2, 26, -2, 20, -17, 33, -30, 30, -32, 17, -20 )
disabled = true

[node name="shooter" type="CollisionShape2D" parent="basicenemy/Area2D"]
visible = false
shape = SubResource( 7 )
disabled = true

[node name="enemyself" type="Area2D" parent="basicenemy"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="basicenemy/enemyself"]
visible = false
shape = SubResource( 8 )

[node name="enemyaura" type="Area2D" parent="basicenemy"]
z_index = -1
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="basicenemy/enemyaura"]
shape = SubResource( 11 )

[node name="gutpain" type="AudioStreamPlayer2D" parent="basicenemy"]
stream = ExtResource( 14 )
volume_db = -15.0
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/enemydamageflash = SubResource( 10 )

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 3, 3 )
emitting = false
lifetime = 2.0
one_shot = true
speed_scale = 12.0
explosiveness = 0.88
process_material = SubResource( 12 )
texture = ExtResource( 1 )

[connection signal="area_entered" from="basicenemy/basicenemy" to="basicenemy" method="_on_basicenemy_area_entered"]
[connection signal="area_entered" from="basicenemy/Area2D" to="basicenemy" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="basicenemy/Area2D" to="basicenemy" method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="basicenemy/enemyself" to="basicenemy" method="_on_enemyself_area_entered"]
[connection signal="area_entered" from="basicenemy/enemyaura" to="basicenemy" method="_on_enemyaura_area_entered"]
